==================
JellyRoll Change Log
==================

Version 0.11.2.1, 25 September, 2018
------------------------------
* Fix Paypal Webhook - already processed

Version 0.11.2.0, 24 September, 2018
------------------------------
* Reduce Brand pages
* Order Status updates
* Remove custom slugify

Version 0.11.1.5, 01 September, 2018
------------------------------
* Fix adding more products to cart than stock available

Version 0.11.1.4, 28 August, 2018
------------------------------
* Fix encoding when reading request.body in webhook

Version 0.11.1.3, 28 August, 2018
------------------------------
* Make sure add_status sets the current status to the latest order status

Version 0.11.1.2, 25 August, 2018
------------------------------
* 404 When order can't be found on payment-create
* Make sure we pass payment info to payment-execute

Version 0.11.1.1, 25 August, 2018
------------------------------
* Replace straight API calls with PayPalRestSDK

Version 0.11.1.0, 25 August, 2018
------------------------------
* Change from PayPal IPN to PayPal API

Version 0.11.0.7, 21 August, 2018
------------------------------
* Fix admin settings
* Add accepted stage to PayPal IPN

Version 0.11.0.6, 21 August, 2018
------------------------------
* Fix PayPal IPN

Version 0.11.0.5, 21 August, 2018
------------------------------
* Handle AddressNotFoundError when using geoip
* Add URL to payment success error email
* Empty shipping migrations
  Covered by tieredweightzone migrations, split during Django 2.1 upgrade
* Add obj=None to ExchangeRateInline has_add_permission
* Fix calculating of currency converted discounts

Version 0.11.0.4, 20 August, 2018
------------------------------
* Don't re-encode shipping description

Version 0.11.0.3, 20 August, 2018
------------------------------
* Redirect to order status if we can't find the order in the request

Version 0.11.0.2, 20 August, 2018
------------------------------
* Improve Order.objects.from_request