@@ -5,6 +5,7 @@ JellyRoll Change Log
 Version 0.11.2.1, 25 September, 2018
 ------------------------------
 * Fix Paypal Webhook - already processed
+* Fix order history page
 
 Version 0.11.2.0, 24 September, 2018
 ------------------------------
